--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NODE_ENV=develop
+NODE_ENV=production
 APP_WELCOME=Ruby Bank API Dev
 APP_URL=http://localhost:3000/
 HASH_SECRET_KEY=f15310f51e7a993c921ae216222982ab0f904d06
